--- a/Uralsib.Stalfond.Direct/Uralsib.Stalfond.Direct.csproj
+++ b/Uralsib.Stalfond.Direct/Uralsib.Stalfond.Direct.csproj
@@ -94,6 +94,7 @@
   <ItemGroup>
     <Compile Include="Classes\Result.cs" />
     <Compile Include="Direct\StalfondDirect.cs" />
+    <Compile Include="Helpers\StatusesHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
