--- a/Uralsib.Stalfond.Direct/Uralsib.Stalfond.Direct.csproj
+++ b/Uralsib.Stalfond.Direct/Uralsib.Stalfond.Direct.csproj
@@ -93,7 +93,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\Result.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="Direct\StalfondDirect.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validation\SnilsValidator.cs" />
   </ItemGroup>
